<resources>
    <string name="app_name">TheBestPalov</string>
    <string name="welcome_to_restaurant">WELCOME TO RESTAURANT</string>
    <string name="the_best_palov">THE BEST PALOV</string>
    <string name="_79775770055">+79775770055</string>
    <string name="trubnaya_str_10">Trubnaya str., 10</string>
    <string name="order_now">ORDER NOW</string>
    <string name="thebestpalov_com">THEBESTPALOV.COM</string>
</resources>
